[project]
name = "hostalgrid-plus-plus"
version = "1.0.0"
description = "Human-Aware Energy Optimization Environment"
authors = [
    {name = "Anshu Tiwari"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/anshu-123/hostalgrid-plus-plus"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"